@@ -3,7 +3,7 @@
 #
 # Library Makefile for the Fast Light Tool Kit (FLTK).
 #
-# Copyright 1998-2016 by Bill Spitzak and others.
+# Copyright 1998-2017 by Bill Spitzak and others.
 #
 # This library is free software. Distribution and use rights are outlined in
 # the file "COPYING" which should have been included with this file.  If this
@@ -79,6 +79,7 @@ CPPFILES = \
 	Fl_Shared_Image.cxx \
 	Fl_Single_Window.cxx \
 	Fl_Slider.cxx \
+	Fl_Spinner.cxx \
 	Fl_System_Driver.cxx \
 	Fl_Table.cxx \
 	Fl_Table_Row.cxx \
